--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Search</title>
 </head>
 <body>
-  <h1>Welcome to my app!</h1>
-
-  <script>
-    // Your frontend JavaScript code here (to make API calls, etc.)
-  </script>
+    <div id="music-search-app"></div>
+    <script src="app.js"></script>
 </body>
 </html>
