Early settings page

--- a/public/index.html
+++ b/public/index.html
@@ -81,13 +81,12 @@
             </div>
         </div>
 
-        <!-- Download Queue Sidebar -->
         <div id="download-queue">
             <h3>Download Queue</h3>
             <ul></ul>
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
