--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div id="music-search-app">
             <h1>Lucidarr</h1>
             <div id="search-results">
-                <h2>Search Results</h2>
+                <h2>Search by module</h2>
                 <ul id="results-list"></ul>
             </div>
         </div>
